--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Shritesh Bhattarai <shr@ite.sh>",
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "*",
+    "bs-platform": "8.3.0",
     "parcel-bundler": "^1.12.4"
   }
 }
